# StatLang

./: .gitignore  .gitignore.dev  .gitignore.public  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_DISCUSSION_ANNOUNCEMENT.md  LEGAL_RESPONSE_PLAN.md  README.md  SECURITY.md  TEST_PLAN.md  delete_open_sas.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/: ML_project_in_statlang.ipynb  object_detection_walkthrough.ipynb  statlang_walkthrough.ipynb
examples/work/: Marketing_employees.parquet  employees.parquet  enhanced_employees.parquet  high_earners.parquet  population.parquet  sales.parquet  sales_report.parquet
stat_lang/: __init__.py  cli.py  interpreter.py  notebook_interpreter.py  pipeline.py
stat_lang/kernel/: __init__.py  __main__.py  install.py  launch.py  statlang_kernel.py  working_kernel.py
stat_lang/parser/: __init__.py  data_step_parser.py  macro_parser.py  proc_parser.py
stat_lang/procs/: __init__.py  proc_anova.py  proc_append.py  proc_cluster.py  proc_contents.py  proc_corr.py  proc_cvision.py  proc_datasets.py  proc_discrim.py  proc_dnn.py  proc_export.py  proc_factor.py  proc_freq.py  proc_genmod.py  proc_glm.py  proc_import.py  proc_language.py  proc_lifereg.py  proc_llm.py  proc_logit.py  proc_means.py  proc_mixed.py  proc_ml.py  proc_nlp.py  proc_npar1way.py  proc_phreg.py  proc_princomp.py  proc_print.py  proc_reg.py  proc_rl.py  proc_robustreg.py  proc_sort.py  proc_sql.py  proc_surveyselect.py  proc_timeseries.py  proc_transpose.py  proc_ttest.py  proc_univariate.py
stat_lang/utils/: __init__.py  data_utils.py  error_handler.py  expression_evaluator.py  expression_parser.py  format_informat_parser.py  format_processor.py  libname_manager.py  macro_processor.py  model_store.py  statlang_dataset.py
tests/: __init__.py  test_cli_basic.py  test_data_step_basic.py  test_e2e_integration.py  test_interpreter_basic.py  test_proc_means_basic.py  test_proc_print_basic.py  test_proc_sort_basic.py
vscode-extension/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/python/: notebook_runner.py  statlang_runner.py
vscode-extension/snippets/: statlang.json
vscode-extension/src/: extension.ts
vscode-extension/src/notebook/: statlangNotebookProvider.ts
vscode-extension/syntaxes/: statlang.tmLanguage.json
work/: calculated.parquet  employees.parquet  sales.parquet  scores.parquet  test.parquet
